--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,9 @@
     "react-katex": "^3.1.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.5.0",
-    "remark-gfm": "^4.0.0",
+    "rehype-katex": "^7.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
